--- a/wdd130/week1/own/style/site-plan.css
+++ b/wdd130/week1/own/style/site-plan.css
@@ -11,8 +11,9 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font:'Sacramento', cursive;
+  --paragraph-font:'Roboto', sans-serif;
+
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2e59a9 ;  /* headlines on a white background */ 
@@ -57,6 +58,7 @@ header {
   text-align: center;
   color: var(--paragraph-color-on-color);
   background-color: var(--paragraph-background-color);
+  
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
