--- a/wdd130/week1/own/style/personal-web.css
+++ b/wdd130/week1/own/style/personal-web.css
@@ -8,8 +8,40 @@
 }
 
 header {
-    background-color:rgba(20,30,13, .7);
+    background-color: #0000ff;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
+
+.top {
+    position: relative;
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+    color: #0000ff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
+  }
+
+  h3 {
+    color: #fdd2a9;
+  }
+.intro {
+    width: 30%;
+    margin: auto;
+  }
+a {
+    text-decoration: none;
+}
+
+.contact-message {
+    width: 40%;
+    margin: 40px auto 60px;
+  }
 
 nav a {
     text-align: center;
@@ -19,13 +51,104 @@ nav a {
     font-family: 'Roboto', sans-serif;
 }
 
+.middle-container {
+    margin: 100px 0;
+    text-align: center;
+    
+}
+
+p {
+    line-height: 2;
+}
+
+hr {
+    border: dotted #fdd2a9 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+  }
+
 body {
     margin: 0;
     font-family: 'Merriweather', serif;
-    font-size: large;
-    background-color: #fdd2a9;
+    background-color: #ffffff;
+    color: #40514E;
+    font-size: 22px;
+    padding: 0;
+    
     
 }
+
+a:hover {
+    color: #fdd2a9;
+    background-color: #ffffff;
+  }
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+.code-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+footer {
+    background-color: #fdd2a9;
+    color: white;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+    padding: 25px 50px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+footer a:hover {
+    color: #fcfbfb;
+}
+
+footer p {
+    font-size: 1.2em;
+    font-family: 'Roboto', sans-serif;
+}
+
+footer p a:hover {
+    text-decoration: underline;
+}
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+  }
+
+.chilli-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+  }
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+  }
 
 h1 {
     margin-top: 0;
@@ -43,8 +166,400 @@ h1 {
     bottom: 300px;
 }
 
+
+.about {
+    width: 100%;
+    padding: 78px 0px;
+}
+
+.about img {
+    height: auto;
+    width: 420px;
+}
+
+.about-text {
+    width: 550px;
+}
+
+.main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.about-text h1 {
+    color: #fdd2a9;
+    font-size: 80px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about-text h5 {
+    color: #0000ff;
+    font-size: 25px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+    letter-spacing: 2px;
+}
+
 .top-cloud {
     position: absolute;
     right: 300px;
     top: 50px;
 }
+
+span {
+    color: gold;
+}
+
+.about-text p {
+    color: #232320;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+
+button {
+    background-color: #0000ff;
+    color: #fcfbfb;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+button:hover {
+    color: #232320;
+    background-color: transparent;
+    border: 2px solid #0000ff;
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.service {
+    background-color: #0000ff;
+    width: 100%;
+    padding: 100px 0px;
+}
+
+.title h2 {
+    color: #fcfbfb;
+    font-size: 75px;
+    width: 1130px;
+    margin: 30px auto;
+    text-align: center;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    min-height: 400px;
+    align-items: center;
+
+}
+
+.card {
+    height: 365px;
+    width: 335px;
+    padding: 20px 35px;
+    background: #fdd2a9;
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.card i {
+    font-size: 50px;
+    display: block;
+    text-align: center;
+    margin: 25px 0px;
+    color: #0000ff;
+}
+
+h5 {
+    color: #ffffff;
+    font-size: 23px;
+    margin-bottom: 15px;
+}
+
+.pra p {
+    color: black;
+    font-size: 16px;
+    line-height: 27px;
+    margin-bottom: 25px;
+}
+
+.card .button {
+    background-color: #0000ff;
+    color: #fcfbfb;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 9px 22px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+.card .button:hover {
+    color: #232320;
+    background-color: transparent;
+    border: 2px solid #0000ff;
+    cursor: pointer;
+    transform: scale(1.2);
+
+}
+
+.contact-me {
+    width: 100%;
+    height: 290px;
+    background: #fdd2a9;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contact-me p {
+    color: #40514E;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+.contact-me .button-two {
+    background-color: #0000ff;
+    color: #fcfbfb;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+.contact-me .button-two:hover {
+    color: #232320;
+    background-color: transparent;
+    border: 2px solid #0000ff;
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.btn {
+    background: #0000ff;
+    background-image: -webkit-linear-gradient(top, #0000ff, #4361ee);
+    background-image: -moz-linear-gradient(top, #0000ff, #4361ee);
+    background-image: -ms-linear-gradient(top, #0000ff, #4361ee);
+    background-image: -o-linear-gradient(top, #0000ff, #4361ee);
+    background-image: linear-gradient(to bottom, #0000ff, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+  .c-info__hero {
+    display: flex;
+  }
+
+.c-info__hero-col {
+    width: 100%;
+    position: relative;
+    z-index: 100;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.c-info h1, .c-info h2 {
+    font-size: 35px;
+    color: #232320;
+    line-height: 150%;
+}
+
+.c-info h1 {
+    letter-spacing: -2px;
+}
+
+.c-info p {
+    color: #656270;
+    font-size: 18px;
+    line-height: 32px;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.c-info p+p {
+    margin-top: 2em;
+}
+
+.c-info__hero-col:nth-child(2) {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.c-info__hero-col {
+    width: 100%;
+    position: relative;
+    z-index: 100;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+*, :after, :before {
+    box-sizing: inherit;
+}
+
+div {
+    display: block;
+}
+
+element.style {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.c-info__avatar {
+    max-width: 100%;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 52px 74px rgb(0 21 64 / 14%);
+    max-width: 580px;
+    margin: 0 auto 4em;
+}
+
+.o-flexy {
+    box-sizing: border-box;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.c-info h2 {
+    letter-spacing: -1px;
+    max-width: 1120px;
+    margin: 0 auto;
+}
+
+.c-info h1, .c-info h2 {
+    font-size: 35px;
+    color: #232320;
+    line-height: 150%;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.c-info h2 {
+    letter-spacing: -1px;
+    max-width: 1120px;
+    margin: 0 auto;
+}
+.c-info h1, .c-info h2 {
+    font-size: 35px;
+    color: #232320;
+    line-height: 150%;
+}
+
+.c-gant__chart {
+    width: 100%;
+    max-width: 100%;
+    display: -ms-grid;
+    display: grid;
+    padding: 4em 0;
+    row-gap: 1em;
+    /* -ms-grid-columns: (1fr)[1]; */
+    /* grid-template-columns: repeat(1,1fr); */
+}
+
+
+  @media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+
+    
+}
+
+  
