--- a/wdd130/week1/wwr/styles/contact.css
+++ b/wdd130/week1/wwr/styles/contact.css
@@ -4,83 +4,185 @@
     box-sizing: border-box;
 }
 
-main {
-    padding: 40px 15px;
-}
-
 .contact {
-    background-color: bisque;
-    height: 100%;
-    width: 100%;
-    min-height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    align-items: center;
-    grid-gap: 6rem;
-}
-
-.contact-img img{
-    max-width: 100%;
-    width: 720px;
-    height: auto;
-    border-radius: 10px;
-}
-.contact-form h1{
-    font-size: 80px;
-    color: black;
-    margin-bottom: 20px;
-}
-
-span {
-    color: gold;
-}
-
-.contact-form p{
-    color: #c6c9dc;
-    letter-spacing: 1px;
-    line-height: 26px;
-    margin-bottom: 3.8rem;
-    font-size: 1.1rem;
-}
-
-.contact-form {
     position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: url(../images/mountains.jpg);
+    background-size: cover;
 }
 
-.contact-form form input, 
-form textarea {
+.contact .content {
+    max-width: 800px;
+    text-align: center;
+}
+
+.contact .content h2 {
+    font-size: 36px;
+    font-weight: 500;
+    color: aliceblue;
+}
+
+body {
+    background-color: #fcfbfb;
+    margin: 0;
+    font-size: 22px;
+    padding: 0;
+}
+
+.contact .content p {
+    font-weight: 300;
+    color: aliceblue;
+}
+
+.container {
     width: 100%;
-    padding: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.container .contactinfo {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container .contactinfo .box{
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+
+.container .contactinfo .box .icon {
+    min-width: 60px;
+    height: 60px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+
+.container .contactinfo .box .text {
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color: aliceblue;
+    flex-direction: column;
+    font-weight: 300;
+}
+
+.container .contactinfo .box .text h3 {
+    font-weight: 500;
+    color: blue;
+}
+
+.contactform {
+    width: 40%;
+    padding: 40px;
+    background-color: bisque;
+}
+
+.contactform h2 {
+    font-size: 30px;
+    color: black;
+    font-weight: 500;
+}
+
+.contactform .inputBox {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.contactform .inputBox input,
+.contactform .inputBox textarea
+ {
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
     border: none;
+    border-bottom: 2px solid black;
     outline: none;
-    background: #c6c9dc;
-    color: #fff;
-    font-size: 1.1rem;
-    margin-bottom: 0.7rem;
-    border-radius: 10px;
-}
-
-.contact-form textarea {
     resize: none;
-    height: 200px;
 }
 
-.contact-form form .btn{
-    display: inline-block;
-    background: blueviolet;
-    font-size: 1.1rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-weight: 600;
-    border: 2px solid transparent;
-    width: 220px;
-    transition: ease .20s;
+.contactform .inputBox span {
+    position: absolute;
+    left: 0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    pointer-events: none;
+    transition: 0.5s;
+    color: black;
+}
+
+.contactform .inputBox input:focus ~ span,
+.contactform .inputBox input:valid ~ span,
+.contactform .inputBox textarea:focus ~ span,
+.contactform .inputBox textarea:valid ~ span
+ {
+    color: blue;
+    font-size: 12px;
+    transform: translateY(-20px);
+}
+
+.contactform .inputBox input[type="submit"] {
+    width: 100px;
+    background-color: blue;
+    color: aliceblue;
+    border: none;
     cursor: pointer;
-
+    padding: 10px;
+    font-size: 18px;
 }
 
-.contact-form form .btn:hover {
-    border: 2px solid blue;
-    background: transparent;
-    transform: scale(1.1);
+header {
+    background-color:rgba(20,30,13, .7);
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
+@media (max-width: 991px)
+{
+    .contact {
+        padding: 50px;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .container .contactinfo {
+        margin-bottom: 40px;
+    }
+
+    .container .contactinfo, 
+    .contactform
+    {
+        width: 100%;
+    }
 }
