--- a/wdd130/week1/own/style/personal-web.css
+++ b/wdd130/week1/own/style/personal-web.css
@@ -318,12 +318,13 @@ h5 {
 
 .contact-me {
     width: 100%;
-    height: 290px;
+    height: 600px;
     background: #fdd2a9;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    bottom: 20px;
 }
 
 .contact-me p {
